# FloodGuard

./: CMakeLists.txt  README.md  sdkconfig  start_unit_test.bat
components/adc_reader/: CMakeLists.txt
components/adc_reader/include/: adc_reader.h
components/adc_reader/src/: adc_reader.c
components/adc_reader/test/: CMakeLists.txt  test_adc.c
components/clock_module/: CMakeLists.txt
components/clock_module/include/: clock_module.h
components/clock_module/src/: clock_module.c
components/device_common/: CMakeLists.txt
components/device_common/include/: device_common.h
components/device_common/src/: device_common.c  device_gpio.c
components/device_http_client/include/: device_http_client.h
components/device_http_client/src/: device_http_client.c  telegram_writer.c
components/device_macro/: CMakeLists.txt
components/device_macro/include/: device_macro.h
components/device_memory/include/: device_memory.h
components/device_memory/src/: device_memory.c
components/device_task/: CMakeLists.txt
components/device_task/src/: device_task.c
components/forecast_http_client/src/: forecast_http_client.c
components/periodic_task/include/: periodic_task.h
components/periodic_task/src/: periodic_task.c
components/setting_server/: CMakeLists.txt
components/setting_server/embedded_files/: index.html  script.js  style.css
components/sound_generator/: CMakeLists.txt
components/wifi_service/: CMakeLists.txt
main/: CMakeLists.txt  main.c
test/: CMakeLists.txt  pytest_unittest.py  sdkconfig
test/main/: CMakeLists.txt  unit_test_test.c
(+6 files in other folders)
